--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 		</li>
 		<li><a href="#">Projects</a>
 			<ul>
-				<li><a href="#">Web Design</a></li>
-				<li><a href="#">User Experience</a></li>
+				<li><a href="#">UX</a></li>
 			</ul>
 		</li>
 		<li><a href="#">About Me</a></li>
