--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 				<li><a href = https://dchen101.github.io/blog/t1-git-blog.html>Git Blog</a></li>
 				<li><a href = https://dchen101.github.io/blog/c1-chefs-kitchen.html>Chefs Kitchen</a></li>
 				<li><a href = https://dchen101.github.io/blog/t2-css-design.html>CSS Design</a></li>
-					<ul>
-						<li><a href="#">HTML</a></li>
-						<li><a href="#">CSS</a></li>
+				<li><a href = https://dchen101.github.io/blog/c3_thinking-style.html>Thinking Style</a></li>
+				<li><a href = https://dchen101.github.io/blog/c4-tech-issues.html>Tech Issues</a></li>
+				<li><a href = https://dchen101.github.io/blog/c5-feedback.html>Frredback</a></li>
+			<ul>
+		
+
+		<li><a href="#">HTML</a></li>
+		<li><a href="#">CSS</a></li>
 					</ul>
 				</li>
 			</ul>
