--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <p class ="line"></p>
-<p class= "Info">Daniel Chen<br> San Jose, CA | Business/ISM  <br> Working towards becoming a Developer.<br><br></p>
+<p class= "Info">Daniel Chen<br> San Jose, CA | Business/ISM  <br> Working towards becoming a Developer.<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
 <p class ="line"></p>
 
 </html>
