--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 				<li><a href = https://dchen101.github.io/blog/c4-tech-issues.html>Tech Issues</a></li>
 				<li><a href = https://dchen101.github.io/blog/c5-feedback.html>Feedback</a></li>
 				<li><a href = https://dchen101.github.io/blog/c6-stereotype-threat.html>Stereotype Threat</a></li>
+				<li><a href = https://dchen101.github.io/blog/c7-values.html>OOP Concepts</a></li>
+				<li><a href = https://dchen101.github.io/blog/c8-conflict.html>OOP Concepts</a></li>
 				<li><a href = https://dchen101.github.io/blog/t1-git-blog.html>Git Blog</a></li>
 				<li><a href = https://dchen101.github.io/blog/t2-css-design.html>CSS Design</a></li>
 				<li><a href = https://dchen101.github.io/blog/t3-arrays-hashes.html>Arrays and Hashes</a></li>
