--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 				<li><a href = https://dchen101.github.io/blog/c4-tech-issues.html>Tech Issues</a></li>
 				<li><a href = https://dchen101.github.io/blog/c5-feedback.html>Feedback</a></li>
 				<li><a href = https://dchen101.github.io/blog/c6-stereotype-threat.html>Stereotype Threat</a></li>
-				<li><a href = https://dchen101.github.io/blog/c7-values.html>OOP Concepts</a></li>
-				<li><a href = https://dchen101.github.io/blog/c8-conflict.html>OOP Concepts</a></li>
+				<li><a href = https://dchen101.github.io/blog/c7-values.html>Values</a></li>
+				<li><a href = https://dchen101.github.io/blog/c8-conflict.html>Conflict</a></li>
 				<li><a href = https://dchen101.github.io/blog/t1-git-blog.html>Git Blog</a></li>
 				<li><a href = https://dchen101.github.io/blog/t2-css-design.html>CSS Design</a></li>
 				<li><a href = https://dchen101.github.io/blog/t3-arrays-hashes.html>Arrays and Hashes</a></li>
 				<li><a href = https://dchen101.github.io/blog/t4-enumerable-methods.html>Enumerable Methods</a></li>
 				<li><a href = https://dchen101.github.io/blog/t5-ruby-classes.html>Ruby Classes</a></li>
 				<li><a href = https://dchen101.github.io/blog/t6-oop-concepts.html>OOP Concepts</a></li>
+				<li><a href = https://dchen101.github.io/blog/t7-JavaScript.html>JavaScript</a></li>
+				<li><a href = https://dchen101.github.io/blog/t8-tech.html>OOP Concepts</a></li>
 			<ul>
 		
 
