--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<li><a href = https://dchen101.github.io/blog/c6-stereotype-threat.html>Stereotype Threat</a></li>
 				<li><a href = https://dchen101.github.io/blog/c7-values.html>Values</a></li>
 				<li><a href = https://dchen101.github.io/blog/c8-conflict.html>Conflict</a></li>
-				
+				<li><a href = https://dchen101.github.io/blog/c9-questions.html>Questions</a></li>
 			<ul>
 		
 					</ul>
