--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 		<li><a href="#">Projects</a>
 			<ul>
+				<li><a href = https://dchen101.github.io/blog/Professional-Site-Reflection.html>Professional Site Reflection</a></li>
 				<li><a href="#">UX</a></li>
 			</ul>
 		</li>
