--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 		<div class="work">
 			<a href="FB.html">
-				<img src="img/FB.jpg" class="media" alt=""/>
+				<img src="img/fb.jpg" class="media" alt=""/>
 				<div class="caption">
 					<div class="work_title">
 						<h1>FB and Exif</h1>
