Edited Pokemon blog

--- a/Pokemongo.html
+++ b/Pokemongo.html
@@ -47,7 +47,7 @@
 		<section class="wrapper">
 			<div class="content">
 				<p>
-					The government spent millions on health initiatives and all it took was a Pokemon Egg to get a kid to walk 5 km. It’s amazing how gamification can get people do anything. Its also funny how a couple years ago this was an April fools joke from Google that has changed into a phenomenon.
+					The government spent millions on health initiatives and all it took was a Pokemon Egg to get a kid to walk 5 km. It’s crazy to think how gamification can get people do anything. What started out as a joke from Google has become a phenomenon.
 				</p>
 
 			</div><!-- end content -->
