--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a href="index.html"><h1>DChen101</h1></a></li>
 				<li><a href="index.html" class="selected">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -40,39 +40,40 @@
 -->
 	</header>
 	<section class="main clearfix">
-		<h1>Blog</h1>
-		<div class="work">
-			<a href="Pokemongo.html">
-				<img src="img/pokemongo copy.png" class="media" alt=""/>
-				<div class="caption">
-					<div class="work_title">
-						<h1>The Advant of Pokemon Go</h1>
-					</div>
-				</div>
-			</a>
-		</div>
+		 <h1>Portfolio</h1>
+    <div class="work">
+      <a href="ReactLaunchpad.html">
+        <img src="img/ReactLaunchpad PF.png" class="media" alt=""/>
+        <div class="caption">
+          <div class="work_title">
+            <!--<a href="https://powerful-temple-9048.herokuapp.com/">-->
+              <h1>React Launchpad</h1>
+          </div>
+        </div>
+      </a>
+    </div>
 
-		<div class="work">
-			<a href="FB.html">
-				<img src="img/fb.jpg" class="media" alt=""/>
-				<div class="caption">
-					<div class="work_title">
-						<h1>FB and Exif</h1>
-					</div>
-				</div>
-			</a>
-		</div>
+    <div class="work">
+      <a href="Foodmonk.html">
+        <img src="img/Foodmonk PF.png" class="media" alt=""/>
+        <div class="caption">
+          <div class="work_title">
+            <h1>Foodmonk</h1>
+          </div>
+        </div>
+      </a>
+    </div>
 
-		<div class="work">
-			<a href="HKD.html">
-				<img src="img/tpe 101.jpg" class="media" alt=""/>
-				<div class="caption">
-					<div class="work_title">
-						<h1>Full Circle</h1>
-					</div>
-				</div>
-			</a>
-		</div>
+    <div class="work">
+      <a href="MapExif.html">
+        <img src="img/MapExif PF.jpg" class="media" alt=""/>
+        <div class="caption">
+          <div class="work_title">
+            <h1>Map Exif</h1>
+          </div>
+        </div>
+      </a>
+    </div>
 	</section><!-- end main -->
 
 </body>
