--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -12,114 +11,47 @@
 <body>
 
   <header>
-
     <div id="menu_icon"></div>
     <nav>
       <ul>
         <li><a href="index.html"><h1>DChen101</h1></a></li>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="blog.html" class="selected">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav><!-- end navigation menu -->
   </header><!-- end header -->
-
   <section class="main clearfix">
+    <h1>Blog</h1>
     <div class="work">
-      <a href="inner.html">
-        <img src="img/work1.jpg" class="media" alt=""/>
+      <a href="Pokemongo.html">
+        <img src="img/pokemongo copy.png" class="media" alt=""/>
         <div class="caption">
           <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
+            <h1>The Advant of Pokemon Go</h1>
           </div>
         </div>
       </a>
     </div>
 
     <div class="work">
-      <a href="inner.html">
-        <img src="img/work2.jpg" class="media" alt=""/>
+      <a href="FB.html">
+        <img src="img/fb.jpg" class="media" alt=""/>
         <div class="caption">
           <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
+            <h1>FB and Exif</h1>
           </div>
         </div>
       </a>
     </div>
 
     <div class="work">
-      <a href="inner.html">
-        <img src="img/work3.jpg" class="media" alt=""/>
+      <a href="HKD.html">
+        <img src="img/tpe 101.jpg" class="media" alt=""/>
         <div class="caption">
           <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="work">
-      <a href="inner.html">
-        <img src="img/work4.jpg" class="media" alt=""/>
-        <div class="caption">
-          <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="work">
-      <a href="inner.html">
-        <img src="img/work5.jpg" class="media" alt=""/>
-        <div class="caption">
-          <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="work">
-      <a href="inner.html">
-        <img src="img/work6.jpg" class="media" alt=""/>
-        <div class="caption">
-          <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="work">
-      <a href="inner.html">
-        <img src="img/work2.jpg" class="media" alt=""/>
-        <div class="caption">
-          <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="work">
-      <a href="inner.html">
-        <img src="img/work3.jpg" class="media" alt=""/>
-        <div class="caption">
-          <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="work">
-      <a href="inner.html">
-        <img src="img/work1.jpg" class="media" alt=""/>
-        <div class="caption">
-          <div class="work_title">
-            <h1>culpa qui officia deserunt mollit</h1>
+            <h1>Full Circle</h1>
           </div>
         </div>
       </a>
