--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 				<li><a href="index.html"><h1>DChen101</h1></a></li>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html" class="selected">Contact</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
