Added old writings blog docs from local 7/30/2016

--- a/HKD.html
+++ b/HKD.html
@@ -38,13 +38,17 @@
 					</ul>
 
 				</div><!-- end work_nav -->
-				<h1 class="title">Coming Full Circle</h1>
+				<h1 class="title">The Problem with the DCU</h1>
 			</div>
 		</section><!-- end top -->
 
 		<section class="wrapper">
 			<div class="content">
-				<p>About a year ago I was in Taiwan tending to some family business and getting read to join Dev Bootcamp, it’s been a little over a year and things are coming full circle. My job as a web developer will require me to travel to the company HQ in Shenzhen, China, and on my way there I will be dropping in Taipei.I will be meeting with the main technical team and the CEO. I am excited and anxious about what to expect. The startup culture is something that I have always heard and read about growing up in Silicon Valley, and it’s a great opportunity to experience it first hand. This will be my first trip to China, and I am looking forward to seeing what it will like on the other side.
+				<p>
+		 The Suicide Squad reviews are in, and they are bad. Reports are coming in that the film’s final cut was the result of management butting heads with the Ayer, but the issues the DC film universe are facing come from a problem that dates back to when Warner Bros decided to embark on this venture.
+
+     WB really has torpedoed their DC universe, and this did not stem from a few movies but rather from the questionable decisions made by the execs at WB. I just cannot wrap my head around the decision to give Zach Snyder the reins to the DC universe. I know DC is not Marvel, but one of the reasons why Marvel is so successful is because the directors they hired were able to tell a story that could appeal to a wide audience. For whatever reason the studio execs said, “Hey let’s give Zack Snyder full control of our DC lineup, he knows how to direct movies that appeal to everyone!”. He directed what? 300? Watchmen? Dawn of the Dead? Granted those were some good movies, but think about who those movies were for? Those movies that he is most known for were dark, and I think all of them were rated R. Due to the mediocrity of Man of Steel and B v S (both directed by Snyder), now the studio has created unrealistic expectations for Ayer to fulfill. Ayer is forced to carry the DC Universe with Suicide Squad, due to the vision of Snyder. Adding insult to injury WB decided to cut in and edit the movie and make a cut different from Ayer’s original vision. Judging from WB DC exec’s past decisions, they clearly know what audiences want. I’m not saying that Suicide Squad would have been great if the higher ups did not interfere, but it does make you question if the people in charge have the competency to take the franchise in the right direction. Some things that could help? Maybe bringing in Bruce Timm to consult with on how the stories and the universe should be handled. Back in the day Bruce Timm was the main man when it came to the DC animated universe. I grew up watching his universe, Batman the Animated Series, Batman Beyond, Superman, Justice League, the list goes on. The guy really knows how to tell a story, and mind you these were “cartoons”, but they had a mass appeal to adults and kids. Even though animation and live action are two completely different animals, at this point it really could not hurt. Oh well, there will always be The Dark Knight.
+
 				</p>
 
 			</div><!-- end content -->
