--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,18 @@
         </div>
       </a>
     </div>
+
+    <div class="work">
+      <a href="DC.html">
+        <img src="img/JusticeLeague.jpg" class="media" alt=""/>
+        <div class="caption">
+          <div class="work_title">
+            <h1>The Problem with the DCU</h1>
+          </div>
+        </div>
+      </a>
+    </div>
+
   </section><!-- end main -->
 
 </body>
